--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,7 +5,20 @@ on:
     branches:
       - 'master'
 jobs:
-  build-test:
+  formatting:
+    runs-on: ubuntu-latest
+    container: python:3.8
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Install black
+        run: pip install black
+
+      - name: Run Black test
+        run: black --check --diff addok
+
+  testing:
     runs-on: ubuntu-latest
     container: python:3.8
     services:
@@ -21,13 +34,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install test dependencies
-        run: pip install cython python-coveralls black -r requirements-dev.txt
+        run: pip install cython python-coveralls -r requirements-dev.txt
 
       - name: Setup development
         run: python setup.py develop
-
-      - name: Run Black test
-        run: black --check --diff addok
 
       - name: Run Tests
         run: make testcoverage
