Added environment variables to use for tests

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -41,3 +41,6 @@ jobs:
 
       - name: Run Tests
         run: make testcoverage
+        env:
+          REDIS_HOST: redis
+          REDIS_PORT: 6379
